[Refactor Conclude cleanups + Revert Log4j change until 1.19